PLUGINWIZARD-51 : Refactoring to use MVC library
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@51545 bab10101-e421-0410-a517-8ce0973de3ef

--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard.html
@@ -2,7 +2,7 @@
 <div id="one-zone-first">
     <div id="one-zone-first-content">
 		<h2 class="page-title">#i18n{pluginwizard.wizard.pageTitle}</h2>
-		<form class="default-form" method="post" name="generate" >
+		<form class="default-form" method="post" >
 		<p>
 			<input type="hidden" name="page" value="codewizard" />
 			<input type="hidden" name="action" value="zip" />
