--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_attribute.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_attribute.html
@@ -11,7 +11,7 @@
 
 
     <div class="span8">
-        <form class="form-horizontal" method="post" name="generate" >  
+        <form class="form-horizontal" method="post" action="jsp/site/Portal.jsp" >  
             <fieldset>
                 <legend>#i18n{pluginwizard.pluginwizard_create_attribute.pageTitle}</legend>
                 <input type="hidden" name="page" value="pluginwizard" />        
