--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_business_class.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_business_class.html
@@ -12,7 +12,7 @@
 
     <div class="span8">
 
-        <form class="form form-horizontal" method="post" name="generate"  action="jsp/site/Portal.jsp">  
+        <form class="form form-horizontal" method="post"  action="jsp/site/Portal.jsp">  
             <fieldset>
                 <legend>#i18n{pluginwizard.pluginwizard_modify_business_class.pageTitle}</legend>
 
