--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_plugin.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_plugin.html
@@ -7,7 +7,7 @@
     </div>
 
     <div class="span8">
-        <form class="form-horizontal" method="post" name="generate" >
+        <form class="form-horizontal" method="post" action="jsp/site/Portal.jsp" >
             <fieldset>
                 <legend>#i18n{pluginwizard.pluginwizard_modify_plugin.pageTitle}</legend>
 
