--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_plugin_exists.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_plugin_exists.html
@@ -10,7 +10,7 @@
     </div>
 
     <div class="span8">
-        <form class="form form-horizontal well" method="post" name="generate" action="jsp/site/Portal.jsp" >    
+        <form class="form form-horizontal well" method="post" action="jsp/site/Portal.jsp" >    
             <input type="hidden" name="page" value="pluginwizard" />                
             <input type="hidden" name="action" value="do_plugin_exists" />                  
             <input type="hidden" name="plugin_id" value="${plugin_id}" />                                                                                                   
