--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_plugin_recapitulate.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_plugin_recapitulate.html
@@ -91,7 +91,7 @@
 
             </ul>
            <br>
-            <a class="btn btn-primary pull-right" href="jsp/site/Portal.jsp?page=pluginwizard&plugin_id=${plugin_id}&goToManagePluginPortlets" >
+            <a class="btn btn-primary pull-right" href="jsp/site/Portal.jsp?page=pluginwizard&view=managePortlets" >
                 <i class="icon-chevron-left icon-white"></i>
                 #i18n{pluginwizard.pluginwizard_plugin_recapitulate.buttonBack}
             </a>
