--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_application.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_application.html
@@ -5,37 +5,37 @@
     <div class="span3">             
         <@sidebar step="xpage" />
         <div class="portlet-background-content">         
-            #i18n{pluginwizard.pluginwizard_create_plugin_application.pageHelp}    
+            #i18n{pluginwizard.pluginwizard_create_application.pageHelp}    
         </div>  
     </div>
 
     <div class="span8">
-        <form class="form form-horizontal" method="post" name="generate" >
+        <form class="form form-horizontal" method="post" action="jsp/site/Portal.jsp" >
+            <input type="hidden" name="page" value="pluginwizard" />
             <fieldset>
-                <legend>#i18n{pluginwizard.pluginwizard_create_plugin_application.pageTitle}</legend>
+                <legend>#i18n{pluginwizard.pluginwizard_create_application.pageTitle}</legend>
 
-                <input type="hidden" name="page" value="wizard" />
-                <input type="hidden" name="action" value="do_create_application" />
-                <input type="hidden" name="plugin_id" value="${plugin_model.idPlugin}" />      
 
                 <div class="control-group">
-                    <label class="control-label">#i18n{pluginwizard.pluginwizard_create_plugin_application.labelApplicationName} :</label>
+                    <label class="control-label">#i18n{pluginwizard.pluginwizard_create_application.labelApplicationName} :</label>
                     <div class="controls">   
                         <input type="text" name="application_name" value="${plugin_model.pluginName?lower_case}" size="30" />
                     </div>    
                 </div>
 
                 <div class="control-group">
-                    <label class="control-label">#i18n{pluginwizard.pluginwizard_create_plugin_application.labelApplicationClass} :</label>
+                    <label class="control-label">#i18n{pluginwizard.pluginwizard_create_application.labelApplicationClass} :</label>
                     <div class="controls">
                         <input type="text" name="application_class" value="${plugin_model.pluginName?cap_first}App" size="30" />
                     </div>
                 </div>
 
                 <div class="form-actions">                                          
-                    <button type="submit" class="btn btn-primary">#i18n{pluginwizard.pluginwizard_create_plugin_application.buttonCreateApplication}
+                    <button type="submit" name="action_createApplication" class="btn btn-primary">
+                        #i18n{pluginwizard.pluginwizard_create_application.buttonCreateApplication}
                     </button>                   
-                    <button type="submit" name="goToManagePluginApplications" class="btn">#i18n{pluginwizard.pluginwizard_create_plugin_application.buttonBack}
+                    <button type="submit" name="view_manageApplications" class="btn">
+                        #i18n{pluginwizard.pluginwizard_create_application.buttonBack}
                     </button>                                                             
                 </div> 
             </fieldset>
