--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_business_class.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_business_class.html
@@ -10,13 +10,11 @@
 
     <div class="span8">
 
-        <form class="form-horizontal" method="post" name="generate" >                    
+        <form class="form-horizontal" method="post" action="jsp/site/Portal.jsp" >                    
             <fieldset>
                 <legend>#i18n{pluginwizard.pluginwizard_create_business_class.pageTitle}</legend>
 
                 <input type="hidden" name="page" value="pluginwizard" />        
-                <input type="hidden" name="action" value="do_create_class" />        
-                <input type="hidden" name="plugin_id" value="${plugin_model.idPlugin}" />                                                           
                 <div class="control-group">
                     <label class="control-label">#i18n{pluginwizard.pluginwizard_create_business_class.labelBusinessClass} *:</label>      
                     <div class="controls">    
@@ -39,10 +37,10 @@
                 </div>
  
                 <div class="form-actions">                                          
-                    <button type="submit" class="btn btn-primary">
+                    <button type="submit" name="action_createBusinessClass"class="btn btn-primary">
                         #i18n{pluginwizard.pluginwizard_create_business_class.buttonCreateClass}
                     </button>                    
-                    <button type="submit" name="goToManageBusinessClasses" class="btn">
+                    <button type="submit" name="view_manageBusinessClasses" class="btn">
                         #i18n{pluginwizard.pluginwizard_create_business_class.buttonBack}
                     </button>                                                             
                 </div>    
