--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_manage_applications.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_manage_applications.html
@@ -13,13 +13,10 @@
         <h4>#i18n{pluginwizard.pluginwizard_manage_plugin_applications.pageTitle} </h4>                 
 
         <div class="pull-right"> 
-            <form class="default-form" method="post" name="generate"
-                  action="jsp/site/Portal.jsp?page=pluginwizard"><input
-                    type="hidden" name="page" value="pluginwizard" /> <input type="hidden"
-                    name="action" value="manage_plugin_applications" /> <input
-                    type="hidden" name="plugin_id" value="${plugin_id}" />
-
-                <button type="submit" name="goToCreatePluginApplication" class="btn btn-primary">
+            <form class="default-form" method="post" action="jsp/site/Portal.jsp">
+                <input type="hidden" name="page" value="pluginwizard" />
+                <input type="hidden" name="view" value="createApplication" /> 
+                <button type="submit" class="btn btn-primary">
                     <i class="icon-plus icon-white"></i>
                     #i18n{pluginwizard.pluginwizard_manage_plugin_applications.buttonAddApplication}
                 </button>
@@ -65,17 +62,14 @@
         </table>
 
         <div class="form-actions"> 
-            <form class="default-form" method="post" name="generate"
-                  action="jsp/site/Portal.jsp?page=pluginwizard"><input
-                    type="hidden" name="page" value="pluginwizard" /> <input type="hidden"
-                    name="action" value="manage_plugin_applications" /> <input
-                    type="hidden" name="plugin_id" value="${plugin_id}" />
+            <form class="default-form" method="post" action="jsp/site/Portal.jsp">
+                <input type="hidden" name="page" value="pluginwizard" /> 
 
-                <button type="submit" name="goToManageBusinessClasses" class="btn btn-primary">
+                <button type="submit" name="view_manageBusinessClasses" class="btn btn-primary">
                     <i class="icon-chevron-left icon-white"></i>
                     #i18n{pluginwizard.pluginwizard_manage_plugin_applications.buttonBack}
                 </button>
-                <button type="submit" name="goToManagePluginPortlets" class="btn btn-primary">
+                <button type="submit" name="view_managePortlets" class="btn btn-primary">
                     #i18n{pluginwizard.pluginwizard_manage_plugin_applications.buttonNext}
                     <i class="icon-chevron-right icon-white"></i>
                 </button>
