--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_application.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_application.html
@@ -5,34 +5,34 @@
     <div class="span3">             
         <@sidebar step="xpage" />
         <div class="portlet-background-content">         
-            #i18n{pluginwizard.pluginwizard_modify_plugin_application.pageHelp}   
+            #i18n{pluginwizard.pluginwizard_modify_application.pageHelp}   
         </div>  
     </div>
 
     <div class="span8">
-        <form class="form form-horizontal" method="post" name="generate" >       
+        <form class="form form-horizontal" method="post" action="jsp/site/Portal.jsp" >       
             <fieldset>
-                <legend>#i18n{pluginwizard.pluginwizard_modify_plugin_application.pageTitle}</legend>
+                <legend>#i18n{pluginwizard.pluginwizard_modify_application.pageTitle}</legend>
                 <input type="hidden" name="page" value="wizard" />                
                 <input type="hidden" name="action" value="do_modify_application" />                
                 <input type="hidden" name="plugin_id" value="${plugin_model.idPlugin}" />                   
                 <input type="hidden" name="application_id" value="${application.id}" />                                            
 
                 <div class="control-group">
-                    <label class="control-label">#i18n{pluginwizard.pluginwizard_modify_plugin_application.labelApplicationName} :</label>  
+                    <label class="control-label">#i18n{pluginwizard.pluginwizard_modify_application.labelApplicationName} :</label>  
                     <div class="controls">                 
                         <input type="text" name="application_name" value="${application.applicationName}" size="30" />  
                     </div>
                 </div>
                 <div class="control-group">
-                    <label class="control-label">#i18n{pluginwizard.pluginwizard_modify_plugin_application.labelApplicationClass} :</label> 
+                    <label class="control-label">#i18n{pluginwizard.pluginwizard_modify_application.labelApplicationClass} :</label> 
                     <div class="controls">                  
                         <input type="text" name="application_class" value="${application.applicationClass}" size="30" />                            
                     </div>     
                 </div>
                 <div class="form-actions">                                         
-                    <button type="submit" class="btn btn-primary">#i18n{pluginwizard.pluginwizard_modify_plugin_application.buttonModifyApplication}</button>                    
-                    <button type="submit" name="goToManagePluginApplications" class="btn">#i18n{pluginwizard.pluginwizard_modify_plugin_application.buttonBack}</button>	
+                    <button type="submit" class="btn btn-primary">#i18n{pluginwizard.pluginwizard_modify_application.buttonModifyApplication}</button>                    
+                    <button type="submit" name="goToManagePluginApplications" class="btn">#i18n{pluginwizard.pluginwizard_modify_application.buttonBack}</button>	
                 </div>                
             </fieldset>
         </form>  
